# ModularRagEngine

./: .env.example  .gitignore  CLAUDE.md  README.md  composition.py  config.py  pyproject.toml  retrieval_eval.py
api/: engine.py
api/presenters/: __init__.py  context_presenter.py
application/: __init__.py  context_assembler.py  contracts.py  dto.py  index_service.py  ingest_service.py  namespace_resolver.py  search_models.py  search_service.py
application/ports/: __init__.py  interfaces.py
application/services/: __init__.py  indexing_service.py  namespace_resolution_service.py
application/use_cases/: __init__.py  ingest.py  search.py
core/: dataloader.py
domain/: __init__.py  constants.py  entities.py  exceptions.py  ports.py  value_objects.py
infrastructure/: __init__.py  document_loader.py  document_store.py  embedding_service.py  markdown_chunker.py  milvus_store.py  reranker.py
infrastructure/persistence/: __init__.py  bootstrap.py  connection.py  mappers.py  repositories.py
utils/: embeddings.py  ocr.py  retrieval_eval.py
